2015-01-06  Brian Tiffin <btiffin@users.sf.net>

	* cobc/parser.y : fixed segfault with STOP "literal" with the
	  ACCEPT OMITTED feature of waiting for a return attempting
	  to generate code with a null pointer

2014-12-02  Sergey Kashyrin <ska@kiska.net>

	* codegen.c : fix for bug #52 incorrect premature memory release (CANCEL) of INITIAL programs

2014-12-01  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y : fix bug #108 figurative constants not accepted in screen items

2014-11-18  Sergey Kashyrin <ska@kiska.net>

	* field.c : fix bug #89 incorrect LENGTH OF redefined

2014-11-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c (decimal_expand): fix bug #106 allocating cob_decimal too often

2014-10-29  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* config.c (cb_config_entry): remove inline comments from entry
	* config.def, scanner.l : check maximum word length depending on new
	  configuration word-length
	* cobc.c : added std=acu

2014-10-17  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y : added SUPPRESS clause as PENDING, see request #23

2014-09-18  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* pplex.l : bug #96 prevent line overflow, add warning "Source text too long"
	* pplex.l : only show warning "Source text after column ..." if no comment was
	  started in this line before
	  
2014-09-17  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: Set FORMATTED-DATE/DATETIME/TIME functions to implemented
	* reserved.c, parser.y: replaced FORMATTED_CURRENT_FUNC with FUNCTION_NAME
	* tree.c: added compile time checking of date/time formats and offset
	  time presence.

2014-09-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* cobc.c [_MSC_VER] : correct handling of -l (add .lib and pass to linker)
	* cobc.c, cobc.h, error.c : message style change according to C compiler,
	  can be changed via COB_MSG_FORMAT (GCC/MSC)